# libpythonpro

./: README.md  pyproject.toml  requirements-dev.txt  test_file.txt
.github/: dependabot.yml
.github/workflows/: python-app.yml
libpythonpro/: github_api.py
libpythonpro/spam/: db.py  enviador_de_email.py
libpythonpro/tests/: test_github_api.py  test_spam.py  test_usuarios.py
libpythonpro/tests/test_spam/: conftest.py  test_envio_para_base_de_usuarios.py  test_spam.py  test_usuarios.py
source/: conf.py  index.rst
