[tool.poetry]
name = "libpythonpro"
version = "0.1.0"
description = "Módulo para exemplificar construção de projetos Python no curso PyTools"
authors = ["Felipe Antonio <felipe.antonio.online@proton.me>"]
license = "AGPL"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
pytest = "^7.2.1"
Sphinx = "^5.1.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --doctest-modules"